--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="Keywords" content="王李波、李波、博客、个人博客、简历、网站、波、王">
     
     <link href="https://cdn.bootcss.com/minireset.css/0.0.2/minireset.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./src/assets/common/blogHeader.css">
+    <link rel="stylesheet" href="src/assets/css/blogHeader.css">
     
     <style type="text/css">
       body{background: #f9f9f9; overflow-y: scroll;}
