--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="src/assets/css/blogHeader.css">
 
     <style type="text/css">
-      html,body{background: #f9f9f9;font-family: "PingFang-SC-Semibold" ! important;}
+      html,body{background:#ffc39e url("./static/wlb12.jpg") no-repeat; background-size: 100%; font-family: "PingFang-SC-Semibold" ! important;}
     </style>
   </head>
   <body>
